--- a/css/utilities.css
+++ b/css/utilities.css
@@ -126,12 +126,3 @@
   flex: 25%;
   padding:0 0.4rem;
 }
-
-/* Team */
-
-.flex-items {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
